--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <section class="s1">
     <div class="main-container">
       <div class="greeting-wrapper">
-        <h1>Hi, I'm Justin Martinez</h1>
+        <h1 data-text="Hi, I'm Justin Martinez">Hi, I'm Justin Martinez</h1>
       </div>
       <div class="intro-wrapper">
         <div class="nav-wrapper">
